k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lacco-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lacco-backend
  template:
    metadata:
      labels:
        app: lacco-backend
    spec:
      containers:
      - name: lacco-backend
        image: matysz21/lacco-app:latest
        ports:
        - containerPort: 8080
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lacco-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lacco-backend
  template:
    metadata:
      labels:
        app: lacco-backend
    spec:
      containers:
      - name: lacco-backend
        image: matysz21/lacco-app:latest
        ports:
        - containerPort: 8081      # Poprawiony port aplikacji
        livenessProbe:
          httpGet:
            path: /
            port: 8081             # Pukamy do portu 8081
          initialDelaySeconds: 150 # 2.5 minuty - bezpieczny czas dla Javy na słabej maszynie
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 8081             # Pukamy do portu 8081
          initialDelaySeconds: 120 # 2 minuty - czas na połączenie z bazą i JPA
          periodSeconds: 15
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        volumeMounts:
        - name: lacco-storage
          mountPath: /app/data
      volumes:
      - name: lacco-storage
        persistentVolumeClaim:
          claimName: lacco-data-pvc
