k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lacco-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lacco-frontend
  template:
    metadata:
      labels:
        app: lacco-frontend
    spec:
      containers:
      - name: lacco-frontend
        image: matysz21/lacco-frontend:latest
        ports:
        - containerPort: 80
