k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: lacco-backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
