k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-external
spec:
  type: NodePort
  selector:
    app: lacco-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
