k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lacco-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "lacco-static-ip"
    networking.gke.io/managed-certificates: "lacco-cert"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: lacco.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
