k8s/lacco-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lacco-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - lacco.pl
    secretName: lacco-pl-tls
  rules:
  - host: lacco.pl
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend  # <--- TU MUSI BYĆ "backend", NIE "backend-service"
            port:
              number: 8081
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-external  # <--- TU MUSI BYĆ "frontend-external", NIE "frontend-service"
            port:
              number: 80
